# Harbor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  harbor.downloads.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  downloads.rs  health.rs  orchestrator.rs  state.rs  types.rs
crates/core/tests/: config_tests.rs
crates/tauri-app/: Cargo.toml  check_output.txt  tauri.conf.json
crates/tauri-app/capabilities/: main.json
crates/tauri-app/src/: main.rs  state.rs
crates/tauri-app/src/commands/: activity.rs  rules.rs  settings.rs
crates/tray/: Cargo.toml
crates/tray/src/: logic.rs  main.rs
docs/: POE_TASKS.md
examples/: harbor.downloads.yaml
tools/: version.ps1
